Fix grid generating in wrong size

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ main {
 }
 
 .square {
-    width: 6.25%;
     aspect-ratio: 1 / 1;;
     background-color: rgb(102, 126, 88);
     margin: 0;
